# Cheetah-Software

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
common/: CMakeLists.txt
common/include/: cppTypes.h
common/include/Dynamics/: Cheetah3.h  FloatingBaseModel.h  MiniCheetah.h  Quadruped.h
common/include/Math/: MathUtilities.h
common/include/Utilities/: SharedMemory.h  pseudoInverse.h  utilities.h
common/src/ControlParameters/: ControlParameters.cpp
common/src/Controllers/: GaitScheduler.cpp
common/src/SparseCMPC/: SparseCMPC_Math.cpp
common/src/Utilities/: utilities.cpp
rc_test/: CMakeLists.txt  rc_test_main.cpp
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotRunner.h  main_helper.h
robot/src/: RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: rt_rc_interface.cpp  rt_sbus.cpp  rt_serial.cpp
scripts/: build.sh  make_types.sh  make_types_no_java.sh  run_robot.sh  run_sim.sh
scripts/lcm-log2smat/: CMakeLists.txt
sim/: CMakeLists.txt
sim/include/: RobotInterface.h  SimControlPanel.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  SimControlPanel.cpp  Simulation.cpp  main.cpp
user/Example_Leg_InvDyn/: Leg_InvDyn_Controller.cpp
user/MIT_Controller/: CMakeLists.txt  MIT_Controller.cpp  main.cpp
user/MIT_Controller/Controllers/BackFlip/: DataReadCtrl.hpp  DataReader.cpp
user/MIT_Controller/Controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerVBL.hpp  ReferenceGRF.hpp
user/MIT_Controller/Controllers/VisionMPC/: VisionMPCLocomotion.cpp  VisionMPC_interface.cpp  VisionRobotState.cpp  VisionRobotState.h  VisionSolverMPC.cpp  VisionSolverMPC.h
user/MIT_Controller/Controllers/WBC/WBIC/: WBIC.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/: WBC_Ctrl.hpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  common_types.h  convexMPC_interface.cpp  convexMPC_util.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.h  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_Vision.h
